--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Document your travel experiences and journey, Share them with friends and get engagement">
+    <meta property="og:image" content="/og-image.png">
     <title>Document your travel experience share your experiences with others | Roamlog</title>
   </head>
   <body>
